deployment/k8s/archivist.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivist-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: archivist
  template:
    metadata:
      labels:
        app: archivist
    spec:
      containers:
        - name: archivist
          image: dormammun/gravity-archivist
---
apiVersion: v1
kind: Service
metadata:
  name: archivist-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: archivist
  ports:
    - name: archivist
      protocol: TCP
      port: 3000
      targetPort: 3000
