deployment/k8s/passport.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passport-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passport
  template:
    metadata:
      labels:
        app: passport
    spec:
      containers:
        - name: passport
          image: dormammun/gravity-passport
---
apiVersion: v1
kind: Service
metadata:
  name: passport-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: passport
  ports:
    - name: passport
      protocol: TCP
      port: 3000
      targetPort: 3000
