deployment/k8s/telegraph-db.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraph-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraph-db
  template:
    metadata:
      labels:
        app: telegraph-db
    spec:
      containers:
        - name: telegraph-db
          image: postgres:12.2
---
apiVersion: v1
kind: Service
metadata:
  name: telegraph-db-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: telegraph-db
  ports:
    - name: telegraph-db
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: telegraph-db-node-port-srv
spec:
  type: NodePort
  selector:
    app: telegraph-db
  ports:
    - name: telegraph-db
      protocol: TCP
      port: 30702
      nodePort: 30702
      targetPort: 5432
