deployment/k8s/ingress.srv.yaml
# install https://kubernetes.github.io/ingress-nginx/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: gravity.io
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: web-cluster-ip-srv
                port:
                  number: 3000
    - host: passport.gravity.io
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: passport-cluster-ip-srv
                port:
                  number: 3000
---
spec:
  rules:
    - host: passport-db.gravity.io
      stream:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: passport-db-cluster-ip-srv
                port:
                  number: 5432
